--- a/src/main/resources/templates/myTemplate.html
+++ b/src/main/resources/templates/myTemplate.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-	<h1>Exemple</h1>
-	<h2 th:text="${message}">My Thymeleaf Error Page</h2>
+	<h1>Exemple de template</h1>
+	<h2 th:text="${message}">Un exemple</h2>
 </body>
 
 </html>
